Week 10/app-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: weighttracker-service
  namespace: weighttracker-space
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app: weighttracker
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      # nodePort: 30000
