Week 10/app-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weighttracker-ingress
  namespace: weighttracker-space
  annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: wta.f2cc263e5e5a42dfbe15.eastus.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weighttracker-service
            port:
              number: 80
